--- a/ckan/templates/group/index.html
+++ b/ckan/templates/group/index.html
@@ -1,12 +1,11 @@
 {% extends "page.html" %}
-
 {% block subtitle %}{{ _('Groups') }}{% endblock %}
 
 {% block breadcrumb_content %}
   <li class="active">{% link_for _('Groups'), controller='group', action='index', named_route=group_type + '_index' %}</li>
 {% endblock %}
 
-{% block page_header %}{% endblock %}
+{% block page_header %}Test{% endblock %}
 
 {% block page_primary_action %}
   {% if h.check_access('group_create') %}
@@ -39,5 +38,6 @@
 {% endblock %}
 
 {% block secondary_content %}
+  **** index Test group
   {% snippet "group/snippets/helper.html" %}
 {% endblock %}
