--- a/ckan/templates/group/new.html
+++ b/ckan/templates/group/new.html
@@ -9,5 +9,6 @@
 {% block page_header %}{% endblock %}
 
 {% block secondary_content %}
+  Test group
   {% snippet "group/snippets/helper.html" %}
 {% endblock %}
