--- a/ckan/templates/group/snippets/helper.html
+++ b/ckan/templates/group/snippets/helper.html
@@ -1,7 +1,7 @@
 <div class="module module-narrow module-shallow">
   <h2 class="module-heading">
     <i class="fa fa-info-circle"></i>
-    {{ _('What are Groups?') }}
+    {{ _('What are Groups?') }} Test
   </h2>
   <div class="module-content">
     <p>
