--- a/ckan/templates/snippets/organization.html
+++ b/ckan/templates/snippets/organization.html
@@ -18,6 +18,7 @@ Example:
 {% set url = h.url_for(organization.type + '_read', id=organization.name, ) %}
 
   {% block info %}
+  Test org
   <div class="module module-narrow module-shallow context-info">
     {% if has_context_title %}
       <h2 class="module-heading"><i class="fa fa-building-o"></i> {{ _('Organization') }}</h2>
